tab complete bottom and top of world in /claimheight set